--- a/app/src/main/res/layout-land/activity_workout.xml
+++ b/app/src/main/res/layout-land/activity_workout.xml
@@ -14,9 +14,8 @@
         android:id="@+id/boardImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="Hangboard"
+        android:contentDescription="@string/hangboard_image"
         android:focusableInTouchMode="true"
-        android:paddingRight="0dp"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -30,7 +29,7 @@
         android:layout_marginTop="4dp"
         android:text="xxmin left\n 1. set(1/6)"
         android:textColor="@android:color/black"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -38,7 +37,7 @@
         android:id="@+id/pinchZoomImageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:contentDescription="hangboard image"
+        android:contentDescription="@string/hangboard_image"
         android:visibility="visible"
         app:srcCompat="@drawable/beast1000" />
 
@@ -46,13 +45,13 @@
         android:id="@+id/leftHandImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="left hand image" />
+        android:contentDescription="@string/finger_image" />
 
     <ImageView
         android:id="@+id/rightHandImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="right hand  image" />
+        android:contentDescription="@string/finger_image" />
 
     <Chronometer
         android:id="@+id/lapseTimeChrono"
@@ -62,10 +61,8 @@
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:layout_weight="0"
-        android:autoText="false"
         android:gravity="bottom|end"
         android:paddingBottom="40dp"
-        android:text="100"
         android:textAlignment="textEnd"
         android:textColor="@android:color/holo_red_dark"
         android:textSize="150sp"
@@ -88,16 +85,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
-            android:text="Workout Progress" />
+            android:text="@string/workout_progress" />
 
         <TextView
             android:id="@+id/gradTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="false"
-            android:layout_alignParentTop="false"
             android:layout_weight="0"
-            android:text="HOLD: , GRIP: , Difficulty: "
             android:textAlignment="textStart"
             android:textColor="@android:color/black"
             android:textSize="25sp" />
@@ -113,11 +107,12 @@
                 style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="70dp"
-                android:layout_alignParentBottom="true"
                 android:layout_weight="2"
                 android:indeterminate="false"
                 android:paddingBottom="1dp"
-                android:paddingLeft="1dp"
+                android:paddingEnd="1dp"
+                android:paddingStart="1dp"
+                android:paddingTop="1dp"
                 android:scaleY="30"
                 android:visibility="visible" />
 
@@ -126,11 +121,10 @@
                 style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="70dp"
-                android:layout_alignParentBottom="true"
                 android:layout_weight="1"
                 android:indeterminate="false"
                 android:paddingBottom="1dp"
-                android:paddingLeft="5dp"
+                android:paddingStart="5dp"
                 android:scaleY="30"
                 android:visibility="visible" />
 
@@ -144,7 +138,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_weight="0"
                 android:elevation="0dp"
-                android:text="pause"
+                android:text="@string/pause"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
